# Graphy

./: CMakeLists.txt  LICENCE.txt  readme.md
examples/: demo.cpp
include/Graphy/: Graph.hpp  Graph.hpp~  Graphable.hpp  Graphables.hpp  Graphy.hpp
include/Graphy/Graphables/: Axis.hpp  Bin.hpp  ColorMap.hpp  DataSet.hpp  Equation.hpp  Histogram.hpp  ImplicitEquation.hpp  Point.hpp
include/Graphy/Graphables/Styles/: AxisStyle.hpp  BinStyle.hpp  InequalityStyle.hpp  LabelStyle.hpp  LineStyle.hpp  PointStyle.hpp
include/Graphy/Regression/: Regression.hpp
include/Graphy/Utils/: DoubleRect.hpp  StatusBar.hpp  Vector2d.hpp  random_color.hpp
src/: Axis.cpp~  ColorMap.cpp~  DataSet.cpp~  Equation.cpp~  Graph_ctors.cpp~  Graph_graphables.cpp~  Graph_helpers.cpp~  Graph_map.cpp~  Graph_view.cpp~  Graph_window.cpp~  Graphable.cpp~  Histogram.cpp~  ImplicitEquation.cpp~  Point.cpp~  StatusBar.cpp~
src/Graph/: ctors.cpp  ctors.cpp~  graphables.cpp  helpers.cpp  helpers.cpp~  map.cpp  view.cpp  window.cpp  window.cpp~
src/Graphables/: Axis.cpp  Axis.cpp~  ColorMap.cpp  DataSet.cpp  DataSet.cpp~  Equation.cpp  Equation.cpp~  Graphable.cpp  Graphable.cpp~  Histogram.cpp  Histogram.cpp~  ImplicitEquation.cpp  ImplicitEquation.cpp~  Point.cpp  Point.cpp~
src/internal/: SFDraw.cpp  StatusBar.cpp  StatusBar.cpp~  random_color.cpp
src/internal/include/: SFDraw.h  SFMath.h  bind_array.h  linalg.h  prog_info.h
